--- a/.Github/Workflow/deploy.yml
+++ b/.Github/Workflow/deploy.yml
@@ -1,1 +1,35 @@
+name: Bigquery_Deployment
 
+on:
+  worflow_dispatch:
+    inputs:
+      list_file:
+        Description: "Name of the File which contains the Order in which File has to be Deployed"
+        Required: True
+        Default: "Script_Order_Execution.txt"
+jobs:
+  deploy_to_bigquery:
+    runs_on: ubuntu-latest
+    steps:
+    - name: Checkout the Code
+      uses: actions/checkout@v3
+
+    - name: Set up Google Cloud
+      uses: google-github-actions/setup-gcloud@v1
+      with: 
+        project_id: {{ secrets.PROJECT_ID}}
+        service_account_key: {{secrets.SA_KEY}}
+    - name: Authenticate with Google Cloud
+      run: |
+        echo "${{ secrets.GCP_SA_KEY }}" | gcloud auth activate-service-account --key-file=-
+        gcloud config set project ${{ secrets.GCP_PROJECT_ID }}
+    - name: Read Each file and Deploy into Big Query
+      run: |
+        # Read the file list from the provided file (list_file)
+        while read -r sql_file; do
+          echo "Deploying file: $sql_file"
+          bq query --use_legacy_sql=false < "$sql_file"
+        done < "${{ github.event.inputs.list_file }}"
+    - name: Deployment Summary
+        run: echo "Deployment Completed"
+        
