--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,10 +20,10 @@ jobs:
       with: 
         project_id: ${{ secrets.PROJECT_ID}}
         service_account_key: ${{secrets.SA_KEY}}
-    - name: Authenticate with Google Cloud
-      run: |
-        echo "${{ secrets.GCP_SA_KEY }}" | gcloud auth activate-service-account ${{secrets.SA_EMAIL}} --key-file=-
-        gcloud config set project ${{ secrets.GCP_PROJECT_ID }}
+    - name: Set up Google Cloud authentication
+      uses: google-github-actions/auth@v2
+      with:
+        credentials_json: ${{ secrets.SA_KEY }}
     - name: Read Each file and Deploy into Big Query
       run: |
         # Read the file list from the provided file (list_file)
